--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
-<Limit GET POST PUT OPTIONS>
-    Require all granted
+<Limit GET HEAD POST PUT DELETE OPTIONS>
+# Deprecated apache 2.2 syntax:
+# Order Allow,Deny
+# Allow from all
+# Apache > 2.4 requires:
+Require all granted
 </Limit>
-<LimitExcept GET POST PUT OPTIONS>
-    Require all denied
-</LimitExcept>
